# service-gateway-server

./: .flake8  .gitignore  .style.yapf  .trivyignore  Dockerfile  NOTICE  README.md  docker-compose.yml  junit.xml.tpl  pyproject.toml  pytest.ini  servicegwd.bash-completion
app/config/: server.conf  sshd_config
docs/: service-gateway-server.md
features/: conftest.py  infra.py  run.py  test_features.py
features/implementation/: package.py  pip.py  proc_check.py  servicegwd.py  timeout.py
features/scenarios/: help.feature  package.feature  version.feature
maketools/: help.mk  help.txt  image.mk  init.mk  make-help.txt  package.mk  scan.mk  static.mk  test.mk  venv.mk
maketools/format/: python.mk
maketools/static/: docker-compose.mk  python.mk  shellcheck.mk
servicegwd/: __main__.py
servicegwd/cli/: main.py
tests/: test_main.py
